force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recommendation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>