force-app/main/default/objects/Recommendation__c/fields/Reason_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decision__c</fullName>
    <label>Reason for Decision</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>