force-app/main/default/objects/Recommendation__c/fields/Recommender__c.field-meta.xml
<CustomField>
    <fullName>Recommender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>